Include richard z's changes to work on heroku

--- a/hw3/Gemfile
+++ b/hw3/Gemfile
@@ -5,9 +5,6 @@ gem 'rails', '3.1.0'
 # Bundle edge Rails instead:
 # gem 'rails',     :git => 'git://github.com/rails/rails.git'
 
-gem 'sqlite3'
-
-
 # Gems used only for assets and not required
 # in production environments by default.
 group :assets do
@@ -25,6 +22,13 @@ gem 'jquery-rails'
 # Deploy with Capistrano
 # gem 'capistrano'
 
-# To use debugger
-gem 'ruby-debug19', :require => 'ruby-debug'
+group :development, :test do
+  gem 'sqlite3'
+  gem 'ruby-debug19'
+end
+
+group :production do
+  gem 'pg'
+end
+
 gem 'haml'
