--- a/hw3/Gemfile
+++ b/hw3/Gemfile
@@ -12,6 +12,7 @@ group :development, :test do
   gem 'database_cleaner'
   gem 'capybara'
   gem 'launchy'
+  gem 'rspec-rails'
 end
 group :test do
   gem 'cucumber-rails'
